--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ section {
 /* HEADER */
 header {
 	background: linear-gradient(rgba(43, 46, 74, 0.95), rgba(43, 46, 74, 0.95)), url("https://images.unsplash.com/photo-1432821579285-1b649e5b1ce3?dpr=1.25&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=") 0/cover no-repeat;
-	height: 80vh;
+	min-height: 80vh;
 	color: #fff;
 }
 
@@ -92,6 +92,7 @@ header > nav > ul > li > a:hover:after {
 
 .hero {
 	margin-top: 98px;
+	padding-bottom: 10px;
 }
 
 .hero h1 {
@@ -125,6 +126,10 @@ header > nav > ul > li > a:hover:after {
 	margin: 20px auto;
 	font-size: 13px;
 	font-weight: bold;
+}
+
+.hero .btn:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 /* SECTION PROFIT */
@@ -280,6 +285,7 @@ header > nav > ul > li > a:hover:after {
 /* SECTION QUOTES */
 .quotes {
 	color: #fff;
+	background-color: #53354a;
 }
 
 .quotes .photo {
@@ -307,10 +313,10 @@ header > nav > ul > li > a:hover:after {
 }
 
 #carousel {
-	background-color: #53354a;
 	margin: 0 auto;
 	padding: 0;
 	height: 500px;
+	max-width: 820px;
 	overflow: hidden;
 	position: relative;
 }
@@ -384,6 +390,9 @@ ul.menu li.active {
 	padding: 0;
 }
 
+.download button:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 /* FOOTER */
 footer {
 	margin-top: 100px;
@@ -455,14 +464,95 @@ footer .container-fluid a {
 .col-11 { width: 91.66% }
 .col-12 { width: 100%; }
 
-.col-offset-1 { margin-left: 8.33%; }
-.col-offset-2 { margin-left: 16.66%; }
-.col-offset-3 { margin-left: 25%; }
-.col-offset-4 { margin-left: 33.33%; }
-.col-offset-5 { margin-left: 41.66%; }
-.col-offset-6 { margin-left: 50%; }
-.col-offset-7 { margin-left: 58.33%; }
-.col-offset-8 { margin-left: 66.66%; }
-.col-offset-9 { margin-left: 75%; }
-.col-offset-10 { margin-left: 81.33%; }
-.col-offset-11 { margin-left: 91.66%; }
+/* RWD */
+@media(min-width: 768px) and (max-width: 991px) {
+	/* for tablets */
+	.col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+
+    header > nav > ul > li > a {
+    	padding: 0 18px;
+    }
+
+    .hero h1 {
+    	font-size: 55px;
+    }
+
+    .team {
+    	padding: 0 35px;
+    }
+
+    .team p {
+    	padding-right: 70px;
+    }
+
+	.fix {
+		margin-top: 35px;
+	}
+}
+
+@media(max-width: 767px) {
+	[class*="col-"] {
+		float: left;
+		min-height: 1px;
+		width: 100%;
+	}
+
+	header {
+		height: auto;
+		text-align: center;
+	}
+
+	header > nav {
+		height: auto;
+	}
+
+	header > nav > ul {
+		float: none;
+	}
+
+	header > nav > ul > li {
+		display: block;
+	}
+
+	.hero h1 {
+    	font-size: 40px;
+    	padding: 0 20px;
+    }
+
+    .hero p {
+    	font-size: 18px;
+    	padding: 5px;
+    }
+
+    .team {
+    	padding: 20px;
+    }
+
+    .team .portrait {
+    	margin-top: 50px;
+    }
+
+    .quotes h1 {
+    	font-size: 30px;
+    }
+
+    #carousel > ul.cites > li {
+    	padding: 70px 15px;
+    }
+
+    footer .info > div[class*="col-"] {
+    	height: auto;
+    	padding: 0 25px;
+    }
+}
